deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-app
  namespace: cicd

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
      - name: flask-app
        image: YOUR_DOCKERHUB_USERNAME/flask-k8s-demo:v1

        ports:
        - containerPort: 5000
