service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-service
  namespace: cicd

spec:
  selector:
    app: flask-app

  ports:
  - port: 80
    targetPort: 5000

  type: ClusterIP
